# tatar

./: .gitignore  .travis.yml  Cargo.toml  MIT-LICENSE  README.md
examples/: multi-entry.rs  single-entry.rs
src/: lib.rs
