[package]
name = "tatar"
description = "Rust library to implement reading and writing tar archives."
version = "0.1.0"
authors = ["Sam Saint-Pettersen <s.stpettersen+github@gmail.com>"]
readme = "README.md"
repository = "https://github.com/stpettersens/tatar"
homepage = "https://github.com/stpettersens/tatar"
documentation = "http://docs.rs/tatar"
license = "GPL-3.0/MIT"
keywords = ["tar", "archive", "implementation", "library"]
exclude = [".gitignore", ".travis.yml", "appveyor.yml"]

[dependencies]
regex = "0.1.77"
filetime = "0.1.10"
